# bose_st300

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml  wsgi.py
deploy/: README-deploy.md  nginx.conf
soundtouch/: album_art.py  api.py  discovery.py  models.py  notify.py  version.py
tests/: test_album_art.py  test_models.py
tests/fixtures/: audiodspcontrols.xml  audioproductlevelcontrols.xml  audioproducttonecontrols.xml  audiospeakerattributeandsetting.xml  bass.xml  bassCapabilities.xml  info.xml  now_playing.xml  powerManagement.xml  sources.xml  volume.xml
views/web/: app.py
views/web/static/: app.js  style.css
views/web/templates/: index.html
